<resources>
    <string name="app_name">Food Tracker w/ Audio Input</string>
    <string name="logged_in_user_string">Now you are a logged in user of this app!</string>
    <string name="account_login_string">Account login</string>
    <string name="email_hint_string">Email</string>
    <string name="password_hint_string">Password</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="register_new_account_string">Register new account</string>
    <string name="save_login_checkbox">Keep me signed in</string>
    <string name="register_success_string">Registration successful!</string>
    <string name="register_failed_string">Registration failed! Please try again later</string>
    <string name="invalid_password">Password must contain at least: 8 characters, a letter, and a number!</string>
    <string name="invalid_email">Please enter valid email…</string>
    <string name="login_toast">Please enter email...</string>
    <string name="password_toast">Please enter password!</string>
    <string name="logout">Logout</string>
    <string name="name">Welcome Name</string>
    <string name="meal">Breakfast/Lunch/Dinner</string>
</resources>
